[package]
name = "lunatic"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

[lib]
name = "lunatic"
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
cpp = "0.3.1"
libc = "0.2"
bitflags = "0.9.1"
enum-derive = { path = "enum-derive/" }

[build-dependencies]
cpp_build = "0.3.1"
